// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification portal should render notifications given as direct props 1`] = `
<Connect(Portal)
  notifications={
    Array [
      Object {
        "description": "Some meaningfull description",
        "dismissable": true,
        "id": "0",
        "title": "Notification title",
        "variant": "success",
      },
    ]
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Portal
    notifications={
      Array [
        Object {
          "description": "Some meaningfull description",
          "dismissable": true,
          "id": "0",
          "title": "Notification title",
          "variant": "success",
        },
      ]
    }
    onClearAll={[Function]}
    removeNotification={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
  >
    <Portal
      containerInfo={
        <body>
          <div
            class="notifications-portal"
          >
            <div
              aria-label="Success Alert"
              class="pf-c-alert pf-m-success notification-item"
              data-ouia-component-id="0"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
              id="0"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Success alert:
                </span>
                Notification title
              </h4>
              <div
                class="pf-c-alert__action"
              >
                <button
                  aria-label="close-notification"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-c-alert__description"
              >
                Some meaningfull description
              </div>
            </div>
          </div>
          <div
            class="notifications-portal"
          >
            <div
              aria-label="Success Alert"
              class="pf-c-alert pf-m-success notification-item"
              data-ouia-component-id="1"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
              id="0"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Success alert:
                </span>
                Notification title
              </h4>
              <div
                class="pf-c-alert__action"
              >
                <button
                  aria-label="close-notification"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-c-alert__description"
              >
                Some meaningfull description
              </div>
            </div>
          </div>
        </body>
      }
    >
      <div
        className="notifications-portal"
      >
        <Notification
          description="Some meaningfull description"
          dismissDelay={5000}
          dismissable={true}
          id="0"
          key="0"
          onDismiss={[Function]}
          title="Notification title"
          variant="success"
        >
          <Component
            actionClose={
              <Unknown
                aria-label="close-notification"
                onClick={[Function]}
                variant="plain"
              >
                <CloseIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                />
              </Unknown>
            }
            className="notification-item"
            id="0"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            title="Notification title"
            variant="success"
          >
            <div
              aria-label="Success Alert"
              className="pf-c-alert pf-m-success notification-item"
              data-ouia-component-id={1}
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe={true}
              id="0"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <Component
                variant="success"
              >
                <div
                  className="pf-c-alert__icon"
                >
                  <CheckCircleIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                        transform=""
                      />
                    </svg>
                  </CheckCircleIcon>
                </div>
              </Component>
              <h4
                className="pf-c-alert__title"
              >
                <span
                  className="pf-u-screen-reader"
                >
                  Success alert:
                </span>
                Notification title
              </h4>
              <div
                className="pf-c-alert__action"
              >
                <Component
                  aria-label="close-notification"
                  onClick={[Function]}
                  variant="plain"
                >
                  <Component
                    aria-label="close-notification"
                    onClick={[Function]}
                    variant="plain"
                  >
                    <button
                      aria-disabled={null}
                      aria-label="close-notification"
                      className="pf-c-button pf-m-plain"
                      data-ouia-component-id={null}
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe={true}
                      disabled={false}
                      onClick={[Function]}
                      tabIndex={null}
                      type="button"
                    >
                      <TimesIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 352 512"
                          width="1em"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            transform=""
                          />
                        </svg>
                      </TimesIcon>
                    </button>
                  </Component>
                </Component>
              </div>
              <div
                className="pf-c-alert__description"
              >
                Some meaningfull description
              </div>
            </div>
          </Component>
        </Notification>
      </div>
    </Portal>
  </Portal>
</Connect(Portal)>
`;

exports[`Notification portal should render notifications given as direct props over store notifications 1`] = `
<Connect(Portal)
  notifications={
    Array [
      Object {
        "description": "Some meaningfull description",
        "dismissable": true,
        "id": "Direct notification",
        "title": "Notification title",
        "variant": "success",
      },
    ]
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Portal
    notifications={
      Array [
        Object {
          "description": "Some meaningfull description",
          "dismissable": true,
          "id": "Direct notification",
          "title": "Notification title",
          "variant": "success",
        },
      ]
    }
    onClearAll={[Function]}
    removeNotification={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
  >
    <Portal
      containerInfo={
        <body>
          <div
            class="notifications-portal"
          >
            <div
              aria-label="Success Alert"
              class="pf-c-alert pf-m-success notification-item"
              data-ouia-component-id="0"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
              id="0"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Success alert:
                </span>
                Notification title
              </h4>
              <div
                class="pf-c-alert__action"
              >
                <button
                  aria-label="close-notification"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-c-alert__description"
              >
                Some meaningfull description
              </div>
            </div>
          </div>
          <div
            class="notifications-portal"
          >
            <div
              aria-label="Success Alert"
              class="pf-c-alert pf-m-success notification-item"
              data-ouia-component-id="1"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
              id="0"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Success alert:
                </span>
                Notification title
              </h4>
              <div
                class="pf-c-alert__action"
              >
                <button
                  aria-label="close-notification"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-c-alert__description"
              >
                Some meaningfull description
              </div>
            </div>
          </div>
          <div
            class="notifications-portal"
          >
            <div
              aria-label="Success Alert"
              class="pf-c-alert pf-m-success notification-item"
              data-ouia-component-id="2"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
              id="Direct notification"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Success alert:
                </span>
                Notification title
              </h4>
              <div
                class="pf-c-alert__action"
              >
                <button
                  aria-label="close-notification"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-c-alert__description"
              >
                Some meaningfull description
              </div>
            </div>
          </div>
        </body>
      }
    >
      <div
        className="notifications-portal"
      >
        <Notification
          description="Some meaningfull description"
          dismissDelay={5000}
          dismissable={true}
          id="Direct notification"
          key="Direct notification"
          onDismiss={[Function]}
          title="Notification title"
          variant="success"
        >
          <Component
            actionClose={
              <Unknown
                aria-label="close-notification"
                onClick={[Function]}
                variant="plain"
              >
                <CloseIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                />
              </Unknown>
            }
            className="notification-item"
            id="Direct notification"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            title="Notification title"
            variant="success"
          >
            <div
              aria-label="Success Alert"
              className="pf-c-alert pf-m-success notification-item"
              data-ouia-component-id={2}
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe={true}
              id="Direct notification"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <Component
                variant="success"
              >
                <div
                  className="pf-c-alert__icon"
                >
                  <CheckCircleIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                        transform=""
                      />
                    </svg>
                  </CheckCircleIcon>
                </div>
              </Component>
              <h4
                className="pf-c-alert__title"
              >
                <span
                  className="pf-u-screen-reader"
                >
                  Success alert:
                </span>
                Notification title
              </h4>
              <div
                className="pf-c-alert__action"
              >
                <Component
                  aria-label="close-notification"
                  onClick={[Function]}
                  variant="plain"
                >
                  <Component
                    aria-label="close-notification"
                    onClick={[Function]}
                    variant="plain"
                  >
                    <button
                      aria-disabled={null}
                      aria-label="close-notification"
                      className="pf-c-button pf-m-plain"
                      data-ouia-component-id={null}
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe={true}
                      disabled={false}
                      onClick={[Function]}
                      tabIndex={null}
                      type="button"
                    >
                      <TimesIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 352 512"
                          width="1em"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            transform=""
                          />
                        </svg>
                      </TimesIcon>
                    </button>
                  </Component>
                </Component>
              </div>
              <div
                className="pf-c-alert__description"
              >
                Some meaningfull description
              </div>
            </div>
          </Component>
        </Notification>
      </div>
    </Portal>
  </Portal>
</Connect(Portal)>
`;

exports[`Notification portal should render notifications given from store 1`] = `
<Connect(Portal)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Portal
    notifications={
      Array [
        Object {
          "description": "Some meaningfull description",
          "dismissable": true,
          "id": "0",
          "title": "Notification title",
          "variant": "success",
        },
      ]
    }
    onClearAll={[Function]}
    removeNotification={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
  >
    <Portal
      containerInfo={
        <body>
          <div
            class="notifications-portal"
          >
            <div
              aria-label="Success Alert"
              class="pf-c-alert pf-m-success notification-item"
              data-ouia-component-id="0"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
              id="0"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Success alert:
                </span>
                Notification title
              </h4>
              <div
                class="pf-c-alert__action"
              >
                <button
                  aria-label="close-notification"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-c-alert__description"
              >
                Some meaningfull description
              </div>
            </div>
          </div>
        </body>
      }
    >
      <div
        className="notifications-portal"
      >
        <Notification
          description="Some meaningfull description"
          dismissDelay={5000}
          dismissable={true}
          id="0"
          key="0"
          onDismiss={[Function]}
          title="Notification title"
          variant="success"
        >
          <Component
            actionClose={
              <Unknown
                aria-label="close-notification"
                onClick={[Function]}
                variant="plain"
              >
                <CloseIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                />
              </Unknown>
            }
            className="notification-item"
            id="0"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            title="Notification title"
            variant="success"
          >
            <div
              aria-label="Success Alert"
              className="pf-c-alert pf-m-success notification-item"
              data-ouia-component-id={0}
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe={true}
              id="0"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <Component
                variant="success"
              >
                <div
                  className="pf-c-alert__icon"
                >
                  <CheckCircleIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                        transform=""
                      />
                    </svg>
                  </CheckCircleIcon>
                </div>
              </Component>
              <h4
                className="pf-c-alert__title"
              >
                <span
                  className="pf-u-screen-reader"
                >
                  Success alert:
                </span>
                Notification title
              </h4>
              <div
                className="pf-c-alert__action"
              >
                <Component
                  aria-label="close-notification"
                  onClick={[Function]}
                  variant="plain"
                >
                  <Component
                    aria-label="close-notification"
                    onClick={[Function]}
                    variant="plain"
                  >
                    <button
                      aria-disabled={null}
                      aria-label="close-notification"
                      className="pf-c-button pf-m-plain"
                      data-ouia-component-id={null}
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe={true}
                      disabled={false}
                      onClick={[Function]}
                      tabIndex={null}
                      type="button"
                    >
                      <TimesIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 352 512"
                          width="1em"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            transform=""
                          />
                        </svg>
                      </TimesIcon>
                    </button>
                  </Component>
                </Component>
              </div>
              <div
                className="pf-c-alert__description"
              >
                Some meaningfull description
              </div>
            </div>
          </Component>
        </Notification>
      </div>
    </Portal>
  </Portal>
</Connect(Portal)>
`;
